samples/_failures_safe/1761554664_5ba402_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5074339.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_a5074339.c:143:11: error: expected ‘;’ at end of input
  143 |     result
      |           ^
      |           ;
./samples/SAFE/__tmp_a5074339.c:143:5: error: expected declaration or statement at end of input
  143 |     result
      |     ^~~~~~
